--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ AUTH0_CLIENT_ID={CLIENT_ID}
 AUTH0_DOMAIN={DOMAIN}
 AUTH0_CLIENT_SECRET={CLIENT_SECRET}
 AUTH0_CALLBACK_URL=http://localhost:3000/callback
+
+
+UI_DOMAIN=http://localhost:5173
